# ballbot

./: .ci_skip_packages  .fastrtps.xml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  generate_urdf_from_cad.sh  setup_robot.sh  test.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/linux-gpu/: devcontainer.json
.devcontainer/wsl-gpu/: devcontainer.json
.github/: ament_flake8.ini
.github/actions/lint/: action.yml
.github/actions/test/: action.yml  run.sh
.github/workflows/: docker.yaml  docs.yaml  ros-lint.yaml  ros-test.yaml
docs/: ARCHITECTURE.md  ROADMAP.md  TODO.md
docs/setup/: fan-setup.md  oled-setup.md  ubuntu-22.04-setup.md
scripts/setup/: post-wifi-setup.sh
setup/python_scripts/: fan_control.py  oled_display.py
setup/scripts/: install-oled-dependencies.sh  setup-fan.sh  setup-oled.sh
setup/systemd_files/: fan.service  oled.service
src/: ros2.repos
src/ballbot_base/: CMakeLists.txt  package.xml
src/ballbot_base/config/: twist_mux.yaml
src/ballbot_bringup/: CMakeLists.txt  package.xml
src/ballbot_bringup/launch/: bringup.launch.py  camera.launch.py  joy_teleop.launch.py  lasers.launch.py  robot.launch.py  sensors.launch.py
src/ballbot_description/: CMakeLists.txt  package.xml
src/ballbot_description/launch/: description.launch.py
src/ballbot_description/meshes/: a1_uart_bridge.stl  battery.stl  bn_3318_3664350_hex_stand_off_m2_5x10.stl  bn_3318_3664351_hex_stand_off_m2_5x12.stl  bn_3318_3664352_hex_stand_off_m2_5x16.stl  bn_3319_3664358_hex_stand_off_m2_5x10.stl  board_ipt.stl  bracket.stl  capc_0603_t0_9_bn_ipt.stl  chassis_plate.stl  chassis_plate__configuration_default.stl  connector_1_25_3pin_ipt.stl  detector_mount_ipt.stl  ea25_5.stl  head_ipt.stl  hex_coupler_6mm.stl  hex_coupler_6mm_Configuration_Default.stl  hex_coupler_6mm__configuration_default.stl  hex_stand_off_m2_5x20.stl  hex_thin_nut_grade_a___b_m2_5__383833456425d438c2ea369d8ac772e6.stl  hole_plating_ipt.stl  kksb_camera_mount.stl  kksb_camera_mount_base.stl  kksb_camera_mount_spacer.stl  l298n.stl  m1_5_rubber_spacer.stl  male_pin_header.stl  motherboard_ipt.stl  motor_board_ipt.stl  motor_bracket_md520.stl  motor_bracket_md520__configuration_default.stl  mpu_9250.stl  mpu_9250_headers.stl  pin_header_1x10_th_pitch_2_54mm_ipt.stl  raspberry_pi_4_model_b.stl  resc_0603_ipt__2.stl  resc_0603_ipt__3.stl  rplidar_a1_base.stl  rplidar_a1_head.stl  switch_cover.stl  (+16 more)
src/ballbot_description/meshes/merged/: wheel_assm_3_visual.stl  wheel_assm_4_visual.stl  wheel_assm__configuration_default_3_visual.stl  wheel_assm__configuration_default_visual.stl  wheel_assm_visual.stl
src/ballbot_description/onshape/: cleanup_onshape_output.py  compute_mass_cog.py  fix_ros_mesh_paths.py  requirements.txt
src/ballbot_description/onshape/ballbot/: config.json  gazebo_diff_drive.xml  robot.urdf
src/ballbot_description/onshape/ballbot/assets/: chassis_plate__configuration_default.part  chassis_plate__configuration_default.scad  hex_coupler_6mm.scad  hex_coupler_6mm.stl  hex_nut_m3.part  lock_washer_m3.part  motor_md520z30_12v__configuration_default.scad  screw_m3x4_4.part  screw_m3x6_6.part  screw_m4x8_8.part  spacer_m3_5_60.part  spacer_m3_5_60.scad  wheel__configuration_default.scad
src/ballbot_description/onshape/ballbot_generated/: additional.xml  config.json  gazebo.xml  gazebo_diff_drive.xml  robot.urdf
src/ballbot_description/onshape/ballbot_generated/assets/: a1_uart_bridge.part  a1_uart_bridge.stl  base_ipt.part  battery.part  battery.stl  bn_3318_3664347_hex_stand_off_m2_5x5.part  bn_3318_3664347_hex_stand_off_m2_5x5.stl  bn_3318_3664350_hex_stand_off_m2_5x10.part  bn_3318_3664350_hex_stand_off_m2_5x10.stl  bn_3318_3664351_hex_stand_off_m2_5x12.part  bn_3318_3664351_hex_stand_off_m2_5x12.stl  bn_3318_3664352_hex_stand_off_m2_5x16.part  bn_3318_3664352_hex_stand_off_m2_5x16.stl  bn_3319_3664358_hex_stand_off_m2_5x10.part  board_ipt.part  board_ipt.scad  bracket.part  bracket.stl  cam_3_lens_front.part  cam_3_lens_front.stl  camera_module_3.part  camera_module_3.stl  capc_0603_t0_9_bn_ipt.part  capc_0603_t0_9_bn_ipt.stl  chassis_plate.part  chassis_plate_Configuration_Default.part  chassis_plate_Configuration_Default.stl  config.json  connector_1_25_3pin_ipt.part  connector_1_25_4pin_ipt.part  connector_1_25_4pin_ipt.stl  detector_ipt.part  detector_ipt.stl  detector_mount_ipt.part  ea25_5.part  ea25_5.stl  fan_hat.part  fan_hat.stl  head_base_ipt.part  head_ipt.part  (+94 more)
src/ballbot_description/onshape/ballbot_generated/assets/merged/: wheel_assm__configuration_default_2_visual.stl  wheel_assm__configuration_default_4_visual.stl  wheel_assm__configuration_default_visual.stl  wheel_assm_visual.stl
src/ballbot_description/rviz/: description.rviz
src/ballbot_description/urdf/: ballbot.urdf
src/ballbot_gazebo/: CMakeLists.txt  package.xml
src/ballbot_gazebo/launch/: gazebo.launch.py
src/ballbot_gazebo/scripts/: command_timeout.py
src/ballbot_gazebo/worlds/: bedroom_simple.world
src/ballbot_navigation/: CMakeLists.txt  package.xml
src/ballbot_navigation/config/: navigation.yaml
src/ballbot_navigation/launch/: navigation.launch.py  slam.launch.py
src/ballbot_navigation/maps/: bedroom_simple.yaml  upstairs.pgm  upstairs.yaml
src/ballbot_vision/: CMakeLists.txt  package.xml
src/ballbot_vision/config/: ball_tracker_params_sim.yaml
src/ballbot_vision/launch/: ball_tracker.launch.py
src/ballbot_viz/: CMakeLists.txt  package.xml
src/ballbot_viz/launch/: navigation.launch.py  robot_model.launch.py  slam.launch.py
src/brobot_base/config/: fastrtps.xml  twist_mux.yaml
src/brobot_bringup/: package.xml
src/brobot_bringup/config/: joy.yaml
src/brobot_bringup/launch/: bringup.launch.py  camera.launch.py  custom_robot.launch.py  default_robot.launch.py  joy_teleop.launch.py  lasers.launch.py  robot.launch.py  sensors.launch.py
src/brobot_description/: package.xml
src/brobot_gazebo/: package.xml
src/brobot_navigation/: package.xml
src/brobot_vision/: CMakeLists.txt  package.xml
src/brobot_viz/: package.xml
(+43 files in other folders)
