cmake_minimum_required(VERSION 3.8) # Increased version for better Python handling if needed
project(ballbot_description)

find_package(ament_cmake REQUIRED)
find_package(Python3 REQUIRED COMPONENTS Interpreter) # Find Python interpreter
# find_package(urdf REQUIRED) # Not strictly needed unless you use urdf_check

# --- Installation Settings ---
set(MESH_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/onshape/ballbot_generated/assets) # Where generated meshes are in source
set(MESH_INSTALL_DIR share/${PROJECT_NAME}/meshes) # Where meshes should be installed for ROS
set(URDF_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/onshape/ballbot_generated) # Where original URDF is
set(URDF_INSTALL_DIR share/${PROJECT_NAME}/urdf) # Where final ROS URDF goes
set(FINAL_URDF_NAME ballbot.urdf) # Name of the installed URDF for ROS

# --- Install Original Meshes ---
# Install the mesh files needed by the ROS URDF.
# These should still have the __configuration suffixes if they came from Onshape configs.
install(
    DIRECTORY ${MESH_SOURCE_DIR}/
    DESTINATION ${MESH_INSTALL_DIR}
    FILES_MATCHING PATTERN "*.stl" # Or PATTERN "*" if you need .dae, .part, .scad too
    # Use OPTIONAL if the directory might not exist on first build before generation
    # OPTIONAL
    # COMMENT "Installing mesh files to ${MESH_INSTALL_DIR}" # Removed COMMENT
)

# --- Process URDF for ROS Installation ---
# Define paths for the custom command
set(SOURCE_URDF ${URDF_SOURCE_DIR}/robot.urdf)
set(STAGED_URDF_FOR_ROS ${CMAKE_CURRENT_BINARY_DIR}/robot_ros.urdf) # Temp file in build dir
set(PYTHON_SCRIPT_FIX_PATHS ${CMAKE_CURRENT_SOURCE_DIR}/onshape/fix_ros_mesh_paths.py)

# Ensure Python script exists
if(NOT EXISTS ${PYTHON_SCRIPT_FIX_PATHS})
    message(FATAL_ERROR "Python script not found: ${PYTHON_SCRIPT_FIX_PATHS}")
endif()

# Custom command to run the fix_mesh_paths.py script
# It takes the URDF generated by onshape-to-robot (after name cleanup)
# and modifies the mesh paths for ROS installation.
add_custom_command(
    OUTPUT ${STAGED_URDF_FOR_ROS}
    # Command to run the Python script
    COMMAND ${Python3_EXECUTABLE} ${PYTHON_SCRIPT_FIX_PATHS}
            ${SOURCE_URDF} # Input URDF (names already cleaned by post_import)
            ${STAGED_URDF_FOR_ROS} # Output URDF (path fixed)
            ${PROJECT_NAME} # Package name argument
            "meshes" # Mesh install subdirectory argument (must match MESH_INSTALL_DIR relative path)
    DEPENDS ${SOURCE_URDF} ${PYTHON_SCRIPT_FIX_PATHS} # Re-run if source URDF or script changes
    COMMENT "Fixing mesh paths in URDF for ROS installation" # COMMENT in add_custom_command is OK
    VERBATIM # Ensure commands are executed as written
)

# Custom target to ensure the command runs during the build
add_custom_target(prepare_ros_urdf ALL DEPENDS ${STAGED_URDF_FOR_ROS})

# Install the processed URDF (with fixed mesh paths)
install(
    FILES ${STAGED_URDF_FOR_ROS}
    DESTINATION ${URDF_INSTALL_DIR}
    RENAME ${FINAL_URDF_NAME} # Install it as ballbot.urdf
    # Ensure the custom command runs before install tries to find the file
    COMPONENT Runtime # Or use a different component if needed
    # COMMENT "Installing processed URDF to ${URDF_INSTALL_DIR}" # Removed COMMENT
)

# --- Install Launch and RViz files ---
install(
    DIRECTORY launch rviz
    DESTINATION share/${PROJECT_NAME}
    # COMMENT "Installing launch and RViz files" # Removed COMMENT
)

# --- Final Package Setup ---
ament_package()
