<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ballbot_navigation</name>
  <version>0.0.0</version>
    <description>Ballbot Navigation Package</description>
    <maintainer email="atticusrussell@gmail.com">Atticus Russell</maintainer>
    <license>Apache 2.0</license>
    <url type="repository">https://github.com/atticusrussell/ballbot</url>
    <url type="bugtracker">https://github.com/atticusrussell/ballbot/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <!-- for fastrtps profile to work with micro ros agent-->
  <exec_depend>ballbot_base</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <exec_depend>nav2_bringup</exec_depend>
    <exec_depend>slam_toolbox</exec_depend>
  </export>
</package>
